--- a/System/TecSys/src/HomePage/LecturerHomePage.form
+++ b/System/TecSys/src/HomePage/LecturerHomePage.form
@@ -1022,6 +1022,7 @@
                                             </constraints>
                                             <properties>
                                               <font size="20"/>
+                                              <text value=""/>
                                             </properties>
                                           </component>
                                         </children>
@@ -1043,6 +1044,7 @@
                                             <properties>
                                               <columns value="0"/>
                                               <font size="20"/>
+                                              <text value=""/>
                                             </properties>
                                             <clientProperties>
                                               <caretWidth class="java.lang.Integer" value="0"/>
@@ -1084,7 +1086,9 @@
                                                 <preferred-size width="150" height="-1"/>
                                               </grid>
                                             </constraints>
-                                            <properties/>
+                                            <properties>
+                                              <font size="20"/>
+                                            </properties>
                                           </component>
                                         </children>
                                       </grid>
@@ -1102,7 +1106,9 @@
                                                 <preferred-size width="150" height="-1"/>
                                               </grid>
                                             </constraints>
-                                            <properties/>
+                                            <properties>
+                                              <font size="20"/>
+                                            </properties>
                                           </component>
                                         </children>
                                       </grid>
