--- a/System/TecSys/src/HomePage/UndergraduateHomePage.form
+++ b/System/TecSys/src/HomePage/UndergraduateHomePage.form
@@ -1043,7 +1043,7 @@
                                     </properties>
                                     <border type="none"/>
                                     <children>
-                                      <component id="d5feb" class="javax.swing.JLabel">
+                                      <component id="d5feb" class="javax.swing.JLabel" binding="UGProfileImage">
                                         <constraints>
                                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                                         </constraints>
