--- a/System/TecSys/src/HomePage/TechnicalOfficerHomePage.form
+++ b/System/TecSys/src/HomePage/TechnicalOfficerHomePage.form
@@ -140,7 +140,7 @@
                         </properties>
                         <border type="none"/>
                         <children>
-                          <component id="597bb" class="javax.swing.JButton" binding="gradesButton" default-binding="true">
+                          <component id="597bb" class="javax.swing.JButton" binding="DEMOButton" default-binding="true">
                             <constraints>
                               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                             </constraints>
@@ -150,7 +150,7 @@
                               <focusPainted value="false"/>
                               <font size="20"/>
                               <foreground color="-1"/>
-                              <text value="Grades"/>
+                              <text value="DEMO"/>
                             </properties>
                           </component>
                         </children>
