--- a/System/TecSys/src/HomePage/TechnicalOfficerHomePage.form
+++ b/System/TecSys/src/HomePage/TechnicalOfficerHomePage.form
@@ -809,7 +809,7 @@
                   <grid id="7e25d" binding="TOSettings" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="25" left="25" bottom="25" right="50"/>
                     <constraints>
-                      <card name="UGSettingsCard"/>
+                      <card name="TOSettingsCard"/>
                     </constraints>
                     <properties/>
                     <border type="none"/>
@@ -1025,7 +1025,7 @@
                                       </grid>
                                     </children>
                                   </grid>
-                                  <grid id="d282f" binding="TOProfImgPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                                  <grid id="d282f" binding="TOProfImgPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                                     <margin top="0" left="0" bottom="0" right="0"/>
                                     <constraints>
                                       <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -1035,19 +1035,9 @@
                                     </properties>
                                     <border type="none"/>
                                     <children>
-                                      <component id="1a0f" class="javax.swing.JLabel" binding="TOProfileImage">
-                                        <constraints>
-                                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                                            <minimum-size width="250" height="250"/>
-                                          </grid>
-                                        </constraints>
-                                        <properties>
-                                          <text value="Label"/>
-                                        </properties>
-                                      </component>
                                       <component id="620b5" class="javax.swing.JButton" binding="uploadImageButton" default-binding="true">
                                         <constraints>
-                                          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
+                                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
                                         </constraints>
                                         <properties>
                                           <text value="Upload Image"/>
